<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.weqar.weqar.LoginActivity">

    <ImageView
        android:id="@+id/textView3"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:src="@drawable/weqar_logo" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:hint="@string/username"
        android:textColor="@color/colorHint"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorLink="@color/colorAccent"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_below="@+id/login_username"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorHint"
        android:textColorLink="@color/colorAccent"/>
    <FrameLayout
        android:id="@+id/frame_login"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/login_password"
        android:layout_height="wrap_content" >

        <at.markushi.ui.CircleButton
            android:id="@+id/login_but"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/weqar_login"
            app:cb_color="#000"
            app:cb_pressedRingWidth="8dip" />

    </FrameLayout>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading_login"
        android:layout_width="140dp"
    android:layout_height="140dp"
    style="@style/AVLoadingIndicatorView"
    android:visibility="invisible"
        android:layout_centerInParent="true"
    app:indicatorName="BallTrianglePathIndicator"
    app:indicatorColor="@color/colorPrimary"

    />
    <TextView
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_login"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="12sp"

        android:textColor="@color/colorHint" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/but_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            android:layout_margin="5dp"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>
        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:background="@color/colorAccent"/>
        <Button
            android:id="@+id/but_newaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            android:layout_margin="5dp"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
