<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.weqar.weqar.SignupActivity">

    <ImageView
        android:id="@+id/textView3"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/weqar_signup" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center"
        android:id="@+id/signup_linear"
        android:layout_below="@+id/textView3">
        <Button
            android:id="@+id/Signup_But_user"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="user"
            android:padding="5dp"
            android:textSize="13sp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/but_selected"
            android:layout_marginEnd="10dp" />
        <Button
            android:id="@+id/Signup_But_vendor"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="Company"
            android:layout_marginLeft="10dp"
            android:background="@drawable/but_unselected"
            android:padding="5dp"
            android:textSize="13sp"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="10dp" />
    </LinearLayout>
    <EditText
        android:id="@+id/signup_username"
        android:layout_width="304dp"
        android:layout_height="50dp"
        android:layout_below="@+id/signup_linear"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:layout_marginTop="40dp"
        android:hint="@string/username"
        android:textColor="@color/colorHint"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorLink="@color/colorAccent"/>
    <EditText
        android:id="@+id/signup_email"
        android:layout_width="304dp"
        android:layout_height="50dp"
        android:layout_below="@+id/signup_username"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/email_id"
        android:textColor="@color/colorHint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorLink="@color/colorAccent"/>

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="304dp"
        android:layout_height="50dp"
        android:layout_below="@+id/signup_email"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorHint"
        android:textColorLink="@color/colorAccent"/>
    <EditText
        android:id="@+id/signup_confirm"
        android:layout_width="304dp"
        android:layout_height="50dp"
        android:layout_below="@+id/signup_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorHint"
        android:textColorLink="@color/colorAccent"/>
    <Button
        android:id="@+id/but_signup"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_confirm"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:gravity="center"
        android:background="@drawable/but_selected"
        android:textSize="12sp"
        android:layout_marginTop="55dp"
        android:textColor="@color/colorWhite" />

</RelativeLayout>
